import { expect, test, vi } from "vite-plus/test";
import { fetchSMET } from "./smet-data";

// Round numbers to 3 decimals in snapshots to avoid noisy floating-point artifacts.
expect.addSnapshotSerializer({
  test: (val) => typeof val === "number" && Number.isFinite(val) && !Number.isInteger(val),
  serialize: (val) => String(Math.round(val * 1000) / 1000),
});

function mockFetch(text: string): string {
  vi.stubGlobal(
    "fetch",
    vi.fn(() => Promise.resolve(new Response(text, { headers: { "Content-Type": "text/plain" } }))),
  );
  return "https://example.com/test.smet";
}

test("parse AT-07", async () => {
  const smet = `
SMET 1.1 ASCII
[HEADER]
station_id = GGAL2
station_name = Gallreideschrofen
latitude = 47.052267
longitude = 11.335489
altitude = 2180.0
source = LWD Tirol
nodata = -777
creation = 2025-12-03T19:38:35.851532100Z
fields = timestamp ISWR HS LF TA TD TS.000 TS.020 TS.040 TS.060 TSS
#parameters = timestamp GS HS LF LT TP TS.000 TS.020 TS.040 TS.060 T0
#units = ISO8601 W/m² m % K K °C °C °C °C K
[DATA]
2025-11-26T19:40:00Z 1 0.338146 97.9 263.85 263.58109289 -777 -99.9 -99.9 -99.9 264.35
2025-11-26T19:50:00Z 1 0.338045 97.9 263.95 263.680857094 -777 -99.9 -99.9 -99.9 264.35
2025-11-26T20:00:00Z 1 0.339723 97.9 263.95 263.680857094 -777 -99.9 -99.9 -99.9 264.35
2025-11-26T20:10:00Z 1 0.341 97.8 263.85 263.56816033 -777 -99.9 -99.9 -99.9 264.15
`;
  const url = mockFetch(smet);
  const data = await fetchSMET(url);
  expect(data).toMatchSnapshot();
  expect(data.generateSurfaceHoarData()).toMatchSnapshot();
});

test("parse AT-07 with surface hoar", async () => {
  const smet = `
SMET 1.2 ASCII
[HEADER]
station_id = AXLIZ1
station_name = Speicherteich Axamer Lizum
latitude = 47.1801049847685
longitude = 11.2880109778398
altitude = 2103.0
source = LWD Tirol
nodata = -777
creation = 2026-06-28T01:32:05Z
fields = timestamp ISWR HS RH TA PSUM TD TSS VW VW_MAX DW
#parameters = timestamp GS HS LF LT N TP T0 WG WG.Boe WR.Boe
#units = ISO8601 W/m² m 1 K mm K K m/s m/s °
[DATA]
2026-04-01T00:00:00Z 0 1.553 0.995 262.25 0 262.187321887 261.5 0.41 0.88 234.000000745
2026-04-01T00:10:00Z 0 1.554 0.995 262.25 0 262.187321887 261.38 1.26 1.87 217.800000693
2026-04-01T00:20:00Z 0 1.553 0.995 262.35 0 262.287266513 261.29 1.1 2.87 221.400000705
2026-04-01T00:30:00Z 0 1.552 0.996 262.45 0 262.399791307 261.74 1.82 3.22 208.800000665
2026-04-01T00:40:00Z 0 1.551 0.995 262.45 0 262.387211115 262.03 2.08 3.37 216.000000688
2026-04-01T00:50:00Z 0 1.553 0.996 262.55 0 262.499746988 261.97 1.57 3.05 268.200000854
2026-04-01T01:00:00Z 0 1.556 0.996 262.55 0 262.499746988 261.74 1.26 2.64 212.400000676
2026-04-01T01:10:00Z 0 1.556 0.995 262.45 0 262.387211115 261.86 1.57 2.49 214.200000682
2026-04-01T01:20:00Z 0 1.555 0.996 262.55 0 262.499746988 261.83 1.36 3.32 268.200000854
2026-04-01T01:30:00Z 0 1.556 0.996 262.55 0 262.499746988 261.89 2.13 3.57 246.600000785
2026-04-01T01:40:00Z 0 1.558 0.996 262.55 0 262.499746988 261.99 1.22 2.29 235.800000751
2026-04-01T01:50:00Z 0 1.559 0.996 262.55 0 262.499746988 261.6 1.12 2.1 248.400000791
2026-04-01T02:00:00Z 0 1.56 0.996 262.55 0 262.499746988 261.71 1.46 2.34 235.800000751
2026-04-01T02:10:00Z 0 1.56 0.996 262.45 0 262.399791307 261.54 1.8 2.34 213.300000679
2026-04-01T02:20:00Z 0 1.557 0.995 262.35 0 262.287266513 261.48 2.08 3 201.600000642
2026-04-01T02:30:00Z 0 1.559 0.995 262.35 0 262.287266513 261.57 1.52 3.39 264.600000842
2026-04-01T02:40:00Z 0 1.558 0.995 262.45 0 262.387211115 261.85 0.77 1.62 217.800000693
2026-04-01T02:50:00Z 0 1.556 0.996 262.45 0 262.399791307 261.8 0.59 1.13 202.500000645
2026-04-01T03:00:00Z 0 1.557 0.995 262.35 0 262.287266513 261.79 0.87 1.51 219.600000699
2026-04-01T03:10:00Z 0 1.555 0.995 262.45 0 262.387211115 261.69 0.85 1.57 254.700000811
2026-04-01T03:20:00Z 0 1.554 0.995 262.35 0 262.287266513 262.03 1.8 2.34 276.300000879
2026-04-01T03:30:00Z 0 1.554 0.995 262.45 0 262.387211115 262.12 1.96 2.44 252.000000802
2026-04-01T03:40:00Z 0 1.554 0.995 262.45 0 262.387211115 262.32 2.42 3 231.300000736
2026-04-01T03:50:00Z 0 1.553 0.995 262.45 0 262.387211115 262.23 2.82 3.5 216.000000688
2026-04-01T04:00:00Z 0 1.553 0.996 262.35 0 262.299835608 262.53 2.81 4 196.200000625
2026-04-01T04:10:00Z 0 1.552 0.996 262.55 0 262.499746988 262.48 1.96 3.39 207.000000659
2026-04-01T04:20:00Z 0 1.551 0.996 262.65 0 262.599702648 262.27 0.5 1.48 195.300000622
2026-04-01T04:30:00Z 0 1.55 0.996 262.65 0 262.599702648 262.04 0.33 1.77 217.800000693
2026-04-01T04:40:00Z 0 1.551 0.996 262.55 0 262.499746988 262.32 1.73 2.17 226.800000722
2026-04-01T04:50:00Z 0 1.551 0.995 262.45 0 262.387211115 262.39 1.7 2.6 225.000000716
2026-04-01T05:00:00Z 1 1.549 0.995 262.45 0 262.387211115 262.53 0.83 2.03 205.200000653
2026-04-01T05:10:00Z 9 1.546 0.995 262.55 0 262.487155692 262.29 0.75 1.25 167.400000533
2026-04-01T05:20:00Z 15 1.545 0.996 262.75 0 262.69965829 262.49 0.52 0.76 123.300000392
2026-04-01T05:30:00Z 16 1.54 0.995 262.65 0 262.587100244 262.48 0.65 2.24 24.300000077
2026-04-01T05:40:00Z 32 1.539 0.996 262.65 0 262.599702648 262.48 0.16 0.59 159.300000507
2026-04-01T05:50:00Z 50 1.539 0.996 262.65 0 262.599702648 262.63 1.04 1.33 164.700000524
2026-04-01T06:00:00Z 76 1.54 0.996 262.75 0 262.69965829 262.52 1.12 1.68 139.500000444
2026-04-01T06:10:00Z 101 1.539 0.996 262.95 0 262.899569513 262.21 0.56 1.03 163.800000521
2026-04-01T06:20:00Z 99 1.538 0.995 263.15 0 263.086822642 262.14 0.2 0.77 187.200000596
2026-04-01T06:30:00Z 83 1.538 0.995 263.55 0 263.486600119 263.07 0.31 0.96 3.600000011
2026-04-01T06:40:00Z 110 1.537 0.995 263.65 0 263.586544428 263.15 0.11 0.67 231.300000736
2026-04-01T06:50:00Z 132 1.53582 0.996 264.05 0 263.999079847 263.31 0 0 227.700000725
2026-04-01T07:00:00Z 147 1.529 0.995 264.55 0 264.486042103 263.64 0.04 0.44 149.400000476
2026-04-01T07:10:00Z 191 1.53 0.996 264.45 0 264.3989012 263.99 0.73 1.81 27.000000086
2026-04-01T07:20:00Z 214 1.528 0.996 265.15 0 265.098587815 264.29 0 0.34 8.100000026
2026-04-01T07:30:00Z 256 1.524 0.995 265.95 0 265.885256773 264.31 0.05 0.48 297.900000948
2026-04-01T07:40:00Z 291 1.53361 0.995 265.95 0 265.885256773 264.71 0.76 2.34 28.800000092
2026-04-01T07:50:00Z 307 1.527 0.995 265.45 0 265.385537798 265.2 0.49 1.56 29.700000095
2026-04-01T08:00:00Z 288 1.53314 0.996 265.75 0 265.698318437 265.2 0.59 1.81 27.000000086
2026-04-01T08:10:00Z 248 1.529 0.996 265.35 0 265.2984981 265.03 0.8 2.12 25.20000008
2026-04-01T08:20:00Z 464 1.531 0.996 265.55 0 265.498408307 265.85 1 1.99 46.800000149
2026-04-01T08:30:00Z 522 1.528 0.996 266.15 0 266.09813846 265.91 1.25 4.1 143.100000456
2026-04-01T08:40:00Z 506 1.532 0.996 265.45 0 265.398453214 265.25 2.32 5.44 19.800000063
2026-04-01T08:50:00Z 406 1.534 0.996 264.65 0 264.598811759 265.15 1.63 4.35 172.80000055
2026-04-01T09:00:00Z 500 1.531 0.995 265.65 0 265.585425461 266.28 1.18 5.09 323.100001028
2026-04-01T09:10:00Z 375 1.536 0.996 264.95 0 264.898677451 265.46 1.42 4 20.700000066
2026-04-01T09:20:00Z 427 1.536 0.996 265.35 0 265.2984981 266.06 1.55 3.13 26.100000083
2026-04-01T09:30:00Z 362 1.536 0.996 264.95 0 264.898677451 265.91 1.7 3.22 320.40000102
2026-04-01T09:40:00Z 463 1.534 0.996 265.45 0 265.398453214 266.31 1.21 3.02 18.90000006
2026-04-01T09:50:00Z 465 1.531 0.996 265.75 0 265.698318437 266.63 1.08 3.48 45.000000143
2026-04-01T10:00:00Z 451 1.533 0.996 265.55 0 265.498408307 266.54 1.61 3.68 27.000000086
2026-04-01T10:10:00Z 403 1.536 0.996 264.85 0 264.79872224 265.78 2.46 4.8 26.100000083
2026-04-01T10:20:00Z 474 1.536 0.996 264.65 0 264.598811759 266.27 2.79 4.98 21.600000069
2026-04-01T10:30:00Z 486 1.533 0.996 264.75 0 264.698767009 266.45 3.3 5.53 27.900000089
2026-04-01T10:40:00Z 452 1.533 0.997 264.85 0 264.811558805 266.48 2.75 4.77 17.100000054
2026-04-01T10:50:00Z 442 1.52927 0.996 264.85 0 264.79872224 266.39 1.59 2.84 17.100000054
2026-04-01T11:00:00Z 596 1.52865 0.995 265.55 0 265.485481642 267.18 1.41 3.27 29.700000095
2026-04-01T11:10:00Z 458 1.528 0.996 265.25 0 265.198542967 266.8 2.3 5.01 23.400000074
2026-04-01T11:20:00Z 469 1.527 0.995 265.65 0 265.585425461 266.85 1.21 3.57 32.400000103
2026-04-01T11:30:00Z 507 1.526 0.996 265.45 0 265.398453214 266.84 2.4 4.7 13.500000043
2026-04-01T11:40:00Z 574 1.523 0.996 266.25 0 266.198093417 267.59 0.55 1.64 35.100000112
2026-04-01T11:50:00Z 514 1.526 0.996 267.05 0 266.99773237 267.33 1.36 4.26 105.300000335
2026-04-01T12:00:00Z 515 1.525 0.996 266.85 0 266.797822749 267.58 1.22 2.5 27.000000086
2026-04-01T12:10:00Z 538 1.523 0.996 266.05 0 265.998183484 267.83 2.75 5.6 15.300000049
2026-04-01T12:20:00Z 485 1.525 0.996 265.55 0 265.498408307 267.46 2.13 4.05 37.80000012
2026-04-01T12:30:00Z 479 1.522 0.996 265.95 0 265.898228487 267.64 1.83 3.7 17.100000054
2026-04-01T12:40:00Z 483 1.523 0.995 265.75 0 265.685369256 267.62 2.81 4.61 22.500000072
2026-04-01T12:50:00Z 467 1.523 0.996 265.55 0 265.498408307 267.65 2.26 3.92 38.700000123
2026-04-01T13:00:00Z 491 1.523 0.997 265.55 0 265.511323454 267.62 1.89 6.04 27.900000089
2026-04-01T13:10:00Z 474 1.52 0.996 265.95 0 265.898228487 267.73 1.97 5.56 36.900000117
2026-04-01T13:20:00Z 394 1.519 0.996 266.25 0 266.198093417 267.3 1.1 2.34 30.600000097
2026-04-01T13:30:00Z 310 1.517 0.996 266.05 0 265.998183484 267.03 2.13 4.98 31.5000001
2026-04-01T13:40:00Z 340 1.52 0.996 265.55 0 265.498408307 266.9 2.48 4.63 22.500000072
2026-04-01T13:50:00Z 306 1.52 0.996 265.35 0 265.2984981 266.73 2.26 4.69 36.900000117
2026-04-01T14:00:00Z 275 1.519 0.997 265.35 0 265.311390771 266.56 1.61 4.45 21.600000069
2026-04-01T14:10:00Z 366 1.5155 0.997 265.65 0 265.611289774 266.88 1.6 4.33 38.700000123
2026-04-01T14:20:00Z 461 1.51481 0.996 266.45 0 266.398003273 267.76 0.68 1.55 38.700000123
2026-04-01T14:30:00Z 447 1.507 0.996 266.25 0 266.198093417 267.85 1.83 3.18 20.700000066
2026-04-01T14:40:00Z 422 1.509 0.995 266.15 0 266.085144192 267.87 1.13 3.68 29.700000095
2026-04-01T14:50:00Z 283 1.508 0.996 265.85 0 265.798273472 267.41 1.54 3.92 24.300000077
2026-04-01T15:00:00Z 262 1.508 0.996 265.75 0 265.698318437 267.11 1.86 2.99 27.900000089
2026-04-01T15:10:00Z 216 1.51 0.997 265.55 0 265.511323454 266.85 1.43 2.52 43.200000138
2026-04-01T15:20:00Z 174 1.511 0.996 265.65 0 265.598363382 266.72 1.23 2.7 61.200000195
2026-04-01T15:30:00Z 155 1.512 0.995 265.55 0 265.485481642 266.56 1.37 2.63 51.300000163
2026-04-01T15:40:00Z 138 1.512 0.996 265.45 0 265.398453214 266.33 1.33 2.64 27.900000089
2026-04-01T15:50:00Z -777 1.51 0.995 265.55 0 265.485481642 266.296 1.25 2.67 27.000000086
2026-04-01T16:00:00Z -777 1.509 0.996 265.35 0 265.2984981 266.262 1.48 3.6 25.20000008
2026-04-01T16:10:00Z -777 1.507 0.996 265.35 0 265.2984981 266.228 0.8 1.79 304.200000968
2026-04-01T16:20:00Z -777 1.506 0.996 265.65 0 265.598363382 266.194 0.6 1.41 26.100000083
2026-04-01T16:30:00Z 83 1.503 0.996 265.55 0 265.498408307 266.16 0.66 1.28 13.500000043
2026-04-01T16:40:00Z -777 1.503 0.995 265.45 0 265.385537798 266.126 0.53 1.35 37.80000012
2026-04-01T16:50:00Z -777 1.506 0.995 265.55 0 265.485481642 266.091 0.38 1.08 18.90000006
2026-04-01T17:00:00Z -777 1.506 0.996 265.45 0 265.398453214 266.057 0.59 1.03 21.600000069
2026-04-01T17:10:00Z -777 1.51 0.996 265.35 0 265.2984981 266.022 0.62 1.02 5.400000017
2026-04-01T17:20:00Z -777 1.512 0.996 265.25 0 265.198542967 265.988 0.05 0.43 3.600000011
2026-04-01T17:30:00Z -777 1.512 0.996 265.35 0 265.2984981 265.953 0.69 1.46 32.400000103
2026-04-01T17:40:00Z -777 1.512 0.994 265.05 0 264.972880219 265.919 0.57 1.26 18.90000006
2026-04-01T17:50:00Z -777 1.512 0.995 265.15 0 265.085706119 265.884 0 0 29.700000095
2026-04-01T18:00:00Z 0 1.512 0.995 265.15 0 265.085706119 265.85 0 0 317.700001011
2026-04-01T18:10:00Z 0 1.513 0.996 265.15 0 265.098587815 265.76 0.01 0.38 287.100000914
2026-04-01T18:20:00Z 0 1.513 0.995 265.15 0 265.085706119 265.83 0.13 0.55 315.000001003
2026-04-01T18:30:00Z 0 1.513 0.996 265.15 0 265.098587815 265.76 0.16 0.66 187.200000596
2026-04-01T18:40:00Z 0 1.513 0.996 265.25 0 265.198542967 265.78 0.16 0.59 241.200000768
2026-04-01T18:50:00Z 0 1.514 0.995 265.05 0 264.985762178 265.88 0.79 1.5 36.900000117
2026-04-01T19:00:00Z 0 1.511 0.995 265.15 0 265.085706119 265.84 0.11 0.48 2.700000009
2026-04-01T19:10:00Z 0 1.511 0.995 265.15 0 265.085706119 265.74 0.14 1.08 19.800000063
2026-04-01T19:20:00Z 0 1.512 0.996 265.25 0 265.198542967 265.7 0 0 0
2026-04-01T19:30:00Z 0 1.51 0.995 265.25 0 265.185650037 265.82 0.06 0.56 21.600000069
2026-04-01T19:40:00Z 0 1.511 0.996 265.25 0 265.198542967 265.83 0.72 3.16 9.900000032
2026-04-01T19:50:00Z 0 1.511 0.996 265.35 0 265.2984981 265.86 1.64 3.02 29.700000095
2026-04-01T20:00:00Z 0 1.509 0.995 265.25 0 265.185650037 265.91 0.09 0.81 44.10000014
2026-04-01T20:10:00Z 0 1.51 0.995 265.25 0 265.185650037 265.85 0.16 0.75 227.700000725
2026-04-01T20:20:00Z 0 1.511 0.995 265.25 0 265.185650037 265.79 0.9 1.57 221.400000705
2026-04-01T20:30:00Z 0 1.511 0.996 265.25 0 265.198542967 265.74 0.76 1.12 216.90000069
2026-04-01T20:40:00Z 0 1.509 0.996 265.25 0 265.198542967 265.68 0.66 1.28 144.900000461
2026-04-01T20:50:00Z 0 1.509 0.996 265.35 0 265.2984981 265.64 0.99 1.64 198.900000633
2026-04-01T21:00:00Z 0 1.51 0.996 265.35 0 265.2984981 265.66 0.38 1.26 109.80000035
2026-04-01T21:10:00Z 0 1.507 0.995 265.25 0 265.185650037 265.46 0.47 1.09 32.400000103
2026-04-01T21:20:00Z 0 1.507 0.995 265.15 0 265.085706119 265.48 0.47 0.87 193.500000616
2026-04-01T21:30:00Z 0 1.507 0.995 265.15 0 265.085706119 265.59 0.46 1.14 145.800000464
2026-04-01T21:40:00Z 0 1.506 0.996 265.25 0 265.198542967 265.7 0.39 0.76 17.100000054
2026-04-01T21:50:00Z 0 1.505 0.995 265.15 0 265.085706119 265.71 0.02 0.51 297.000000945
2026-04-01T22:00:00Z 0 1.505 0.996 265.25 0 265.198542967 265.68 0.05 0.7 36.000000115
2026-04-01T22:10:00Z 0 1.507 0.995 265.25 0 265.185650037 265.75 0.27 0.76 75.600000241
2026-04-01T22:20:00Z 0 1.507 0.995 265.25 0 265.185650037 265.72 0.51 1.46 9.900000032
2026-04-01T22:30:00Z 0 1.504 0.995 265.25 0 265.185650037 265.7 0.14 0.77 274.500000874
2026-04-01T22:40:00Z 0 1.505 0.995 265.25 0 265.185650037 265.52 0.57 1.1 211.500000673
2026-04-01T22:50:00Z 0 1.505 0.996 265.25 0 265.198542967 265.5 0.47 0.97 58.500000186
2026-04-01T23:00:00Z 0 1.504 0.995 265.25 0 265.185650037 265.48 0.58 1.01 14.400000046
2026-04-01T23:10:00Z 0 1.505 0.996 265.35 0 265.2984981 265.63 0.68 1.32 242.100000771
2026-04-01T23:20:00Z 0 1.505 0.995 265.25 0 265.185650037 265.58 0.21 0.77 270.900000862
2026-04-01T23:30:00Z 0 1.503 0.995 265.25 0 265.185650037 265.52 0.52 1.58 18.90000006
2026-04-01T23:40:00Z 0 1.504 0.995 265.25 0 265.185650037 265.48 0.91 1.73 310.500000988
2026-04-01T23:50:00Z 0 1.503 0.995 265.25 0 265.185650037 265.49 0.35 1.18 42.300000135
`;
  const url = mockFetch(smet);
  const data = await fetchSMET(url);
  expect(data).toMatchSnapshot();
  expect(data.generateSurfaceHoarData()).toMatchSnapshot();
  expect(data.generateDrySnowfallLevelData()).toMatchSnapshot();
});

test("parse AT-02 (with tz = 1: UTC+1)", async () => {
  const smet = `
[HEADER]
station_id = 2900250
station_name = mallnitz_ankogel_hintere_lucke
latitude = 47.0374000
longitude = 13.2027000
altitude = 2317.0000
nodata = -777
fields = timestamp\tTA\tRH\tHS
tz = 1

[DATA]
2025-11-26T18:50:00\t266.05\t0.935\t34.5
2025-11-26T19:00:00\t266.05\t0.934\t34.2
2025-11-26T19:10:00\t265.95\t0.939\t34.1
2025-11-26T19:20:00\t265.95\t0.947\t34
`;
  const url = mockFetch(smet);
  const data = await fetchSMET(url);
  expect(data).toMatchSnapshot();
  expect(data.generateSurfaceHoarData()).toMatchSnapshot();
});

test("parse AT-02 (assume tz = 0: UTC)", async () => {
  const smet = `
[HEADER]
station_id = 2900250
station_name = mallnitz_ankogel_hintere_lucke
latitude = 47.0374000
longitude = 13.2027000
altitude = 2317.0000
nodata = -777
fields = timestamp\tTA\tRH\tHS

[DATA]
2025-11-26T18:50:00\t266.05\t0.935\t34.5
2025-11-26T19:00:00\t266.05\t0.934\t34.2
2025-11-26T19:10:00\t265.95\t0.939\t34.1
2025-11-26T19:20:00\t265.95\t0.947\t34
`;
  const url = mockFetch(smet);
  const data = await fetchSMET(url);
  expect(data).toMatchSnapshot();
  expect(data.generateSurfaceHoarData()).toMatchSnapshot();
});

test("parse AT-02 (2025-12-09)", async () => {
  const smet = `
[HEADER]
station_id       = 2900250
station_name     = mallnitz_ankogel_hintere_lucke
latitude         = 47.037400
longitude        = 13.202700
altitude         = 2317.0
easting          = 363456.169014
northing         = 5210887.725522
epsg             = 32633
nodata           = -999
tz               = 0
fields           = timestamp HS RH TA
[DATA]
2025-12-02T16:30:00   37.600   0.909   272.75
2025-12-02T17:30:00   37.800    -999   272.35
2025-12-02T18:30:00   37.800    -999   272.05
2025-12-02T19:30:00   38.000    -999   272.15
2025-12-02T20:30:00   38.000   0.941   272.25
2025-12-02T21:30:00   37.800    -999   271.95
`;
  const url = mockFetch(smet);
  const data = await fetchSMET(url);
  expect(data).toMatchSnapshot();
  expect(data.generateSurfaceHoarData()).toMatchSnapshot();
});
