// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parse AT-02 (2025-12-09) 1`] = `
StationData {
  "altitude": 2317,
  "forecast": undefined,
  "station": "mallnitz_ankogel_hintere_lucke",
  "timestamps": [
    1764693000000,
    1764696600000,
    1764700200000,
    1764703800000,
    1764707400000,
    1764711000000,
  ],
  "units": {
    "HS": "cm",
    "RH": "%",
    "TA": "℃",
    "timestamp": "",
  },
  "values": {
    "HS": [
      3760,
      3780,
      3780,
      3800,
      3800,
      3780,
    ],
    "RH": [
      90.9,
      null,
      null,
      null,
      94.1,
      null,
    ],
    "TA": [
      -0.4,
      -0.8,
      -1.1,
      -1,
      -0.9,
      -1.2,
    ],
    "timestamp": [],
  },
}
`;

exports[`parse AT-02 (2025-12-09) 2`] = `[]`;

exports[`parse AT-02 (assume tz = 0: UTC) 1`] = `
StationData {
  "altitude": 2317,
  "forecast": undefined,
  "station": "mallnitz_ankogel_hintere_lucke",
  "timestamps": [
    1764183000000,
    1764183600000,
    1764184200000,
    1764184800000,
  ],
  "units": {
    "HS": "cm",
    "RH": "%",
    "TA": "℃",
    "timestamp": "",
  },
  "values": {
    "HS": [
      3450,
      3420,
      3410,
      3400,
    ],
    "RH": [
      93.5,
      93.4,
      93.9,
      94.7,
    ],
    "TA": [
      -7.1,
      -7.1,
      -7.2,
      -7.2,
    ],
    "timestamp": [],
  },
}
`;

exports[`parse AT-02 (assume tz = 0: UTC) 2`] = `[]`;

exports[`parse AT-02 (with tz = 1: UTC+1) 1`] = `
StationData {
  "altitude": 2317,
  "forecast": undefined,
  "station": "mallnitz_ankogel_hintere_lucke",
  "timestamps": [
    1764179400000,
    1764180000000,
    1764180600000,
    1764181200000,
  ],
  "units": {
    "HS": "cm",
    "RH": "%",
    "TA": "℃",
    "timestamp": "",
  },
  "values": {
    "HS": [
      3450,
      3420,
      3410,
      3400,
    ],
    "RH": [
      93.5,
      93.4,
      93.9,
      94.7,
    ],
    "TA": [
      -7.1,
      -7.1,
      -7.2,
      -7.2,
    ],
    "timestamp": [],
  },
}
`;

exports[`parse AT-02 (with tz = 1: UTC+1) 2`] = `[]`;

exports[`parse AT-07 1`] = `
StationData {
  "altitude": 2180,
  "forecast": undefined,
  "station": "Gallreideschrofen",
  "timestamps": [
    1764186000000,
    1764186600000,
    1764187200000,
    1764187800000,
  ],
  "units": {
    "HS": "cm",
    "ISWR": "W/m²",
    "LF": "%",
    "TA": "℃",
    "TD": "℃",
    "TS.000": "°C",
    "TS.020": "°C",
    "TS.040": "°C",
    "TS.060": "°C",
    "TSS": "℃",
    "timestamp": "ISO8601",
  },
  "values": {
    "HS": [
      33.815,
      33.805,
      33.972,
      34.1,
    ],
    "ISWR": [
      1,
      1,
      1,
      1,
    ],
    "LF": [
      97.9,
      97.9,
      97.9,
      97.8,
    ],
    "TA": [
      -9.3,
      -9.2,
      -9.2,
      -9.3,
    ],
    "TD": [
      -9.569,
      -9.469,
      -9.469,
      -9.582,
    ],
    "TS.000": [
      null,
      null,
      null,
      null,
    ],
    "TS.020": [
      -99.9,
      -99.9,
      -99.9,
      -99.9,
    ],
    "TS.040": [
      -99.9,
      -99.9,
      -99.9,
      -99.9,
    ],
    "TS.060": [
      -99.9,
      -99.9,
      -99.9,
      -99.9,
    ],
    "TSS": [
      -8.8,
      -8.8,
      -8.8,
      -9,
    ],
    "timestamp": [],
  },
}
`;

exports[`parse AT-07 2`] = `
[
  -100,
  -100,
  -100,
  -100,
]
`;

exports[`parse AT-07 with surface hoar 1`] = `
StationData {
  "altitude": 2103,
  "forecast": undefined,
  "station": "Speicherteich Axamer Lizum",
  "timestamps": [
    1775001600000,
    1775002200000,
    1775002800000,
    1775003400000,
    1775004000000,
    1775004600000,
    1775005200000,
    1775005800000,
    1775006400000,
    1775007000000,
    1775007600000,
    1775008200000,
    1775008800000,
    1775009400000,
    1775010000000,
    1775010600000,
    1775011200000,
    1775011800000,
    1775012400000,
    1775013000000,
    1775013600000,
    1775014200000,
    1775014800000,
    1775015400000,
    1775016000000,
    1775016600000,
    1775017200000,
    1775017800000,
    1775018400000,
    1775019000000,
    1775019600000,
    1775020200000,
    1775020800000,
    1775021400000,
    1775022000000,
    1775022600000,
    1775023200000,
    1775023800000,
    1775024400000,
    1775025000000,
    1775025600000,
    1775026200000,
    1775026800000,
    1775027400000,
    1775028000000,
    1775028600000,
    1775029200000,
    1775029800000,
    1775030400000,
    1775031000000,
    1775031600000,
    1775032200000,
    1775032800000,
    1775033400000,
    1775034000000,
    1775034600000,
    1775035200000,
    1775035800000,
    1775036400000,
    1775037000000,
    1775037600000,
    1775038200000,
    1775038800000,
    1775039400000,
    1775040000000,
    1775040600000,
    1775041200000,
    1775041800000,
    1775042400000,
    1775043000000,
    1775043600000,
    1775044200000,
    1775044800000,
    1775045400000,
    1775046000000,
    1775046600000,
    1775047200000,
    1775047800000,
    1775048400000,
    1775049000000,
    1775049600000,
    1775050200000,
    1775050800000,
    1775051400000,
    1775052000000,
    1775052600000,
    1775053200000,
    1775053800000,
    1775054400000,
    1775055000000,
    1775055600000,
    1775056200000,
    1775056800000,
    1775057400000,
    1775058000000,
    1775058600000,
    1775059200000,
    1775059800000,
    1775060400000,
    1775061000000,
    1775061600000,
    1775062200000,
    1775062800000,
    1775063400000,
    1775064000000,
    1775064600000,
    1775065200000,
    1775065800000,
    1775066400000,
    1775067000000,
    1775067600000,
    1775068200000,
    1775068800000,
    1775069400000,
    1775070000000,
    1775070600000,
    1775071200000,
    1775071800000,
    1775072400000,
    1775073000000,
    1775073600000,
    1775074200000,
    1775074800000,
    1775075400000,
    1775076000000,
    1775076600000,
    1775077200000,
    1775077800000,
    1775078400000,
    1775079000000,
    1775079600000,
    1775080200000,
    1775080800000,
    1775081400000,
    1775082000000,
    1775082600000,
    1775083200000,
    1775083800000,
    1775084400000,
    1775085000000,
    1775085600000,
    1775086200000,
    1775086800000,
    1775087400000,
  ],
  "units": {
    "DW": "°",
    "HS": "cm",
    "ISWR": "W/m²",
    "PSUM": "mm",
    "RH": "%",
    "TA": "℃",
    "TD": "℃",
    "TSS": "℃",
    "VW": "km/h",
    "VW_MAX": "km/h",
    "timestamp": "ISO8601",
  },
  "values": {
    "DW": [
      234,
      217.8,
      221.4,
      208.8,
      216,
      268.2,
      212.4,
      214.2,
      268.2,
      246.6,
      235.8,
      248.4,
      235.8,
      213.3,
      201.6,
      264.6,
      217.8,
      202.5,
      219.6,
      254.7,
      276.3,
      252,
      231.3,
      216,
      196.2,
      207,
      195.3,
      217.8,
      226.8,
      225,
      205.2,
      167.4,
      123.3,
      24.3,
      159.3,
      164.7,
      139.5,
      163.8,
      187.2,
      3.6,
      231.3,
      227.7,
      149.4,
      27,
      8.1,
      297.9,
      28.8,
      29.7,
      27,
      25.2,
      46.8,
      143.1,
      19.8,
      172.8,
      323.1,
      20.7,
      26.1,
      320.4,
      18.9,
      45,
      27,
      26.1,
      21.6,
      27.9,
      17.1,
      17.1,
      29.7,
      23.4,
      32.4,
      13.5,
      35.1,
      105.3,
      27,
      15.3,
      37.8,
      17.1,
      22.5,
      38.7,
      27.9,
      36.9,
      30.6,
      31.5,
      22.5,
      36.9,
      21.6,
      38.7,
      38.7,
      20.7,
      29.7,
      24.3,
      27.9,
      43.2,
      61.2,
      51.3,
      27.9,
      27,
      25.2,
      304.2,
      26.1,
      13.5,
      37.8,
      18.9,
      21.6,
      5.4,
      3.6,
      32.4,
      18.9,
      29.7,
      317.7,
      287.1,
      315,
      187.2,
      241.2,
      36.9,
      2.7,
      19.8,
      0,
      21.6,
      9.9,
      29.7,
      44.1,
      227.7,
      221.4,
      216.9,
      144.9,
      198.9,
      109.8,
      32.4,
      193.5,
      145.8,
      17.1,
      297,
      36,
      75.6,
      9.9,
      274.5,
      211.5,
      58.5,
      14.4,
      242.1,
      270.9,
      18.9,
      310.5,
      42.3,
    ],
    "HS": [
      155.3,
      155.4,
      155.3,
      155.2,
      155.1,
      155.3,
      155.6,
      155.6,
      155.5,
      155.6,
      155.8,
      155.9,
      156,
      156,
      155.7,
      155.9,
      155.8,
      155.6,
      155.7,
      155.5,
      155.4,
      155.4,
      155.4,
      155.3,
      155.3,
      155.2,
      155.1,
      155,
      155.1,
      155.1,
      154.9,
      154.6,
      154.5,
      154,
      153.9,
      153.9,
      154,
      153.9,
      153.8,
      153.8,
      153.7,
      153.582,
      152.9,
      153,
      152.8,
      152.4,
      153.361,
      152.7,
      153.314,
      152.9,
      153.1,
      152.8,
      153.2,
      153.4,
      153.1,
      153.6,
      153.6,
      153.6,
      153.4,
      153.1,
      153.3,
      153.6,
      153.6,
      153.3,
      153.3,
      152.927,
      152.865,
      152.8,
      152.7,
      152.6,
      152.3,
      152.6,
      152.5,
      152.3,
      152.5,
      152.2,
      152.3,
      152.3,
      152.3,
      152,
      151.9,
      151.7,
      152,
      152,
      151.9,
      151.55,
      151.481,
      150.7,
      150.9,
      150.8,
      150.8,
      151,
      151.1,
      151.2,
      151.2,
      151,
      150.9,
      150.7,
      150.6,
      150.3,
      150.3,
      150.6,
      150.6,
      151,
      151.2,
      151.2,
      151.2,
      151.2,
      151.2,
      151.3,
      151.3,
      151.3,
      151.3,
      151.4,
      151.1,
      151.1,
      151.2,
      151,
      151.1,
      151.1,
      150.9,
      151,
      151.1,
      151.1,
      150.9,
      150.9,
      151,
      150.7,
      150.7,
      150.7,
      150.6,
      150.5,
      150.5,
      150.7,
      150.7,
      150.4,
      150.5,
      150.5,
      150.4,
      150.5,
      150.5,
      150.3,
      150.4,
      150.3,
    ],
    "ISWR": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      1,
      9,
      15,
      16,
      32,
      50,
      76,
      101,
      99,
      83,
      110,
      132,
      147,
      191,
      214,
      256,
      291,
      307,
      288,
      248,
      464,
      522,
      506,
      406,
      500,
      375,
      427,
      362,
      463,
      465,
      451,
      403,
      474,
      486,
      452,
      442,
      596,
      458,
      469,
      507,
      574,
      514,
      515,
      538,
      485,
      479,
      483,
      467,
      491,
      474,
      394,
      310,
      340,
      306,
      275,
      366,
      461,
      447,
      422,
      283,
      262,
      216,
      174,
      155,
      138,
      null,
      null,
      null,
      null,
      83,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "PSUM": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "RH": [
      99.5,
      99.5,
      99.5,
      99.6,
      99.5,
      99.6,
      99.6,
      99.5,
      99.6,
      99.6,
      99.6,
      99.6,
      99.6,
      99.6,
      99.5,
      99.5,
      99.5,
      99.6,
      99.5,
      99.5,
      99.5,
      99.5,
      99.5,
      99.5,
      99.6,
      99.6,
      99.6,
      99.6,
      99.6,
      99.5,
      99.5,
      99.5,
      99.6,
      99.5,
      99.6,
      99.6,
      99.6,
      99.6,
      99.5,
      99.5,
      99.5,
      99.6,
      99.5,
      99.6,
      99.6,
      99.5,
      99.5,
      99.5,
      99.6,
      99.6,
      99.6,
      99.6,
      99.6,
      99.6,
      99.5,
      99.6,
      99.6,
      99.6,
      99.6,
      99.6,
      99.6,
      99.6,
      99.6,
      99.6,
      99.7,
      99.6,
      99.5,
      99.6,
      99.5,
      99.6,
      99.6,
      99.6,
      99.6,
      99.6,
      99.6,
      99.6,
      99.5,
      99.6,
      99.7,
      99.6,
      99.6,
      99.6,
      99.6,
      99.6,
      99.7,
      99.7,
      99.6,
      99.6,
      99.5,
      99.6,
      99.6,
      99.7,
      99.6,
      99.5,
      99.6,
      99.5,
      99.6,
      99.6,
      99.6,
      99.6,
      99.5,
      99.5,
      99.6,
      99.6,
      99.6,
      99.6,
      99.4,
      99.5,
      99.5,
      99.6,
      99.5,
      99.6,
      99.6,
      99.5,
      99.5,
      99.5,
      99.6,
      99.5,
      99.6,
      99.6,
      99.5,
      99.5,
      99.5,
      99.6,
      99.6,
      99.6,
      99.6,
      99.5,
      99.5,
      99.5,
      99.6,
      99.5,
      99.6,
      99.5,
      99.5,
      99.5,
      99.5,
      99.6,
      99.5,
      99.6,
      99.5,
      99.5,
      99.5,
      99.5,
    ],
    "TA": [
      -10.9,
      -10.9,
      -10.8,
      -10.7,
      -10.7,
      -10.6,
      -10.6,
      -10.7,
      -10.6,
      -10.6,
      -10.6,
      -10.6,
      -10.6,
      -10.7,
      -10.8,
      -10.8,
      -10.7,
      -10.7,
      -10.8,
      -10.7,
      -10.8,
      -10.7,
      -10.7,
      -10.7,
      -10.8,
      -10.6,
      -10.5,
      -10.5,
      -10.6,
      -10.7,
      -10.7,
      -10.6,
      -10.4,
      -10.5,
      -10.5,
      -10.5,
      -10.4,
      -10.2,
      -10,
      -9.6,
      -9.5,
      -9.1,
      -8.6,
      -8.7,
      -8,
      -7.2,
      -7.2,
      -7.7,
      -7.4,
      -7.8,
      -7.6,
      -7,
      -7.7,
      -8.5,
      -7.5,
      -8.2,
      -7.8,
      -8.2,
      -7.7,
      -7.4,
      -7.6,
      -8.3,
      -8.5,
      -8.4,
      -8.3,
      -8.3,
      -7.6,
      -7.9,
      -7.5,
      -7.7,
      -6.9,
      -6.1,
      -6.3,
      -7.1,
      -7.6,
      -7.2,
      -7.4,
      -7.6,
      -7.6,
      -7.2,
      -6.9,
      -7.1,
      -7.6,
      -7.8,
      -7.8,
      -7.5,
      -6.7,
      -6.9,
      -7,
      -7.3,
      -7.4,
      -7.6,
      -7.5,
      -7.6,
      -7.7,
      -7.6,
      -7.8,
      -7.8,
      -7.5,
      -7.6,
      -7.7,
      -7.6,
      -7.7,
      -7.8,
      -7.9,
      -7.8,
      -8.1,
      -8,
      -8,
      -8,
      -8,
      -8,
      -7.9,
      -8.1,
      -8,
      -8,
      -7.9,
      -7.9,
      -7.9,
      -7.8,
      -7.9,
      -7.9,
      -7.9,
      -7.9,
      -7.9,
      -7.8,
      -7.8,
      -7.9,
      -8,
      -8,
      -7.9,
      -8,
      -7.9,
      -7.9,
      -7.9,
      -7.9,
      -7.9,
      -7.9,
      -7.9,
      -7.8,
      -7.9,
      -7.9,
      -7.9,
      -7.9,
    ],
    "TD": [
      -10.963,
      -10.963,
      -10.863,
      -10.75,
      -10.763,
      -10.65,
      -10.65,
      -10.763,
      -10.65,
      -10.65,
      -10.65,
      -10.65,
      -10.65,
      -10.75,
      -10.863,
      -10.863,
      -10.763,
      -10.75,
      -10.863,
      -10.763,
      -10.863,
      -10.763,
      -10.763,
      -10.763,
      -10.85,
      -10.65,
      -10.55,
      -10.55,
      -10.65,
      -10.763,
      -10.763,
      -10.663,
      -10.45,
      -10.563,
      -10.55,
      -10.55,
      -10.45,
      -10.25,
      -10.063,
      -9.663,
      -9.563,
      -9.151,
      -8.664,
      -8.751,
      -8.051,
      -7.265,
      -7.265,
      -7.764,
      -7.452,
      -7.852,
      -7.652,
      -7.052,
      -7.752,
      -8.551,
      -7.565,
      -8.251,
      -7.852,
      -8.251,
      -7.752,
      -7.452,
      -7.652,
      -8.351,
      -8.551,
      -8.451,
      -8.338,
      -8.351,
      -7.665,
      -7.951,
      -7.565,
      -7.752,
      -6.952,
      -6.152,
      -6.352,
      -7.152,
      -7.652,
      -7.252,
      -7.465,
      -7.652,
      -7.639,
      -7.252,
      -6.952,
      -7.152,
      -7.652,
      -7.852,
      -7.839,
      -7.539,
      -6.752,
      -6.952,
      -7.065,
      -7.352,
      -7.452,
      -7.639,
      -7.552,
      -7.665,
      -7.752,
      -7.665,
      -7.852,
      -7.852,
      -7.552,
      -7.652,
      -7.764,
      -7.665,
      -7.752,
      -7.852,
      -7.951,
      -7.852,
      -8.177,
      -8.064,
      -8.064,
      -8.051,
      -8.064,
      -8.051,
      -7.951,
      -8.164,
      -8.064,
      -8.064,
      -7.951,
      -7.964,
      -7.951,
      -7.852,
      -7.964,
      -7.964,
      -7.964,
      -7.951,
      -7.951,
      -7.852,
      -7.852,
      -7.964,
      -8.064,
      -8.064,
      -7.951,
      -8.064,
      -7.951,
      -7.964,
      -7.964,
      -7.964,
      -7.964,
      -7.951,
      -7.964,
      -7.852,
      -7.964,
      -7.964,
      -7.964,
      -7.964,
    ],
    "TSS": [
      -11.65,
      -11.77,
      -11.86,
      -11.41,
      -11.12,
      -11.18,
      -11.41,
      -11.29,
      -11.32,
      -11.26,
      -11.16,
      -11.55,
      -11.44,
      -11.61,
      -11.67,
      -11.58,
      -11.3,
      -11.35,
      -11.36,
      -11.46,
      -11.12,
      -11.03,
      -10.83,
      -10.92,
      -10.62,
      -10.67,
      -10.88,
      -11.11,
      -10.83,
      -10.76,
      -10.62,
      -10.86,
      -10.66,
      -10.67,
      -10.67,
      -10.52,
      -10.63,
      -10.94,
      -11.01,
      -10.08,
      -10,
      -9.84,
      -9.51,
      -9.16,
      -8.86,
      -8.84,
      -8.44,
      -7.95,
      -7.95,
      -8.12,
      -7.3,
      -7.24,
      -7.9,
      -8,
      -6.87,
      -7.69,
      -7.09,
      -7.24,
      -6.84,
      -6.52,
      -6.61,
      -7.37,
      -6.88,
      -6.7,
      -6.67,
      -6.76,
      -5.97,
      -6.35,
      -6.3,
      -6.31,
      -5.56,
      -5.82,
      -5.57,
      -5.32,
      -5.69,
      -5.51,
      -5.53,
      -5.5,
      -5.53,
      -5.42,
      -5.85,
      -6.12,
      -6.25,
      -6.42,
      -6.59,
      -6.27,
      -5.39,
      -5.3,
      -5.28,
      -5.74,
      -6.04,
      -6.3,
      -6.43,
      -6.59,
      -6.82,
      -6.854,
      -6.888,
      -6.922,
      -6.956,
      -6.99,
      -7.024,
      -7.059,
      -7.093,
      -7.128,
      -7.162,
      -7.197,
      -7.231,
      -7.266,
      -7.3,
      -7.39,
      -7.32,
      -7.39,
      -7.37,
      -7.27,
      -7.31,
      -7.41,
      -7.45,
      -7.33,
      -7.32,
      -7.29,
      -7.24,
      -7.3,
      -7.36,
      -7.41,
      -7.47,
      -7.51,
      -7.49,
      -7.69,
      -7.67,
      -7.56,
      -7.45,
      -7.44,
      -7.47,
      -7.4,
      -7.43,
      -7.45,
      -7.63,
      -7.65,
      -7.67,
      -7.52,
      -7.57,
      -7.63,
      -7.67,
      -7.66,
    ],
    "VW": [
      1.476,
      4.536,
      3.96,
      6.552,
      7.488,
      5.652,
      4.536,
      5.652,
      4.896,
      7.668,
      4.392,
      4.032,
      5.256,
      6.48,
      7.488,
      5.472,
      2.772,
      2.124,
      3.132,
      3.06,
      6.48,
      7.056,
      8.712,
      10.152,
      10.116,
      7.056,
      1.8,
      1.188,
      6.228,
      6.12,
      2.988,
      2.7,
      1.872,
      2.34,
      0.576,
      3.744,
      4.032,
      2.016,
      0.72,
      1.116,
      0.396,
      0,
      0.144,
      2.628,
      0,
      0.18,
      2.736,
      1.764,
      2.124,
      2.88,
      3.6,
      4.5,
      8.352,
      5.868,
      4.248,
      5.112,
      5.58,
      6.12,
      4.356,
      3.888,
      5.796,
      8.856,
      10.044,
      11.88,
      9.9,
      5.724,
      5.076,
      8.28,
      4.356,
      8.64,
      1.98,
      4.896,
      4.392,
      9.9,
      7.668,
      6.588,
      10.116,
      8.136,
      6.804,
      7.092,
      3.96,
      7.668,
      8.928,
      8.136,
      5.796,
      5.76,
      2.448,
      6.588,
      4.068,
      5.544,
      6.696,
      5.148,
      4.428,
      4.932,
      4.788,
      4.5,
      5.328,
      2.88,
      2.16,
      2.376,
      1.908,
      1.368,
      2.124,
      2.232,
      0.18,
      2.484,
      2.052,
      0,
      0,
      0.036,
      0.468,
      0.576,
      0.576,
      2.844,
      0.396,
      0.504,
      0,
      0.216,
      2.592,
      5.904,
      0.324,
      0.576,
      3.24,
      2.736,
      2.376,
      3.564,
      1.368,
      1.692,
      1.692,
      1.656,
      1.404,
      0.072,
      0.18,
      0.972,
      1.836,
      0.504,
      2.052,
      1.692,
      2.088,
      2.448,
      0.756,
      1.872,
      3.276,
      1.26,
    ],
    "VW_MAX": [
      3.168,
      6.732,
      10.332,
      11.592,
      12.132,
      10.98,
      9.504,
      8.964,
      11.952,
      12.852,
      8.244,
      7.56,
      8.424,
      8.424,
      10.8,
      12.204,
      5.832,
      4.068,
      5.436,
      5.652,
      8.424,
      8.784,
      10.8,
      12.6,
      14.4,
      12.204,
      5.328,
      6.372,
      7.812,
      9.36,
      7.308,
      4.5,
      2.736,
      8.064,
      2.124,
      4.788,
      6.048,
      3.708,
      2.772,
      3.456,
      2.412,
      0,
      1.584,
      6.516,
      1.224,
      1.728,
      8.424,
      5.616,
      6.516,
      7.632,
      7.164,
      14.76,
      19.584,
      15.66,
      18.324,
      14.4,
      11.268,
      11.592,
      10.872,
      12.528,
      13.248,
      17.28,
      17.928,
      19.908,
      17.172,
      10.224,
      11.772,
      18.036,
      12.852,
      16.92,
      5.904,
      15.336,
      9,
      20.16,
      14.58,
      13.32,
      16.596,
      14.112,
      21.744,
      20.016,
      8.424,
      17.928,
      16.668,
      16.884,
      16.02,
      15.588,
      5.58,
      11.448,
      13.248,
      14.112,
      10.764,
      9.072,
      9.72,
      9.468,
      9.504,
      9.612,
      12.96,
      6.444,
      5.076,
      4.608,
      4.86,
      3.888,
      3.708,
      3.672,
      1.548,
      5.256,
      4.536,
      0,
      0,
      1.368,
      1.98,
      2.376,
      2.124,
      5.4,
      1.728,
      3.888,
      0,
      2.016,
      11.376,
      10.872,
      2.916,
      2.7,
      5.652,
      4.032,
      4.608,
      5.904,
      4.536,
      3.924,
      3.132,
      4.104,
      2.736,
      1.836,
      2.52,
      2.736,
      5.256,
      2.772,
      3.96,
      3.492,
      3.636,
      4.752,
      2.772,
      5.688,
      6.228,
      4.248,
    ],
    "timestamp": [],
  },
}
`;

exports[`parse AT-07 with surface hoar 2`] = `
[
  1000,
  1000,
  1000,
  1000,
  1000,
  1000,
  1000,
  1000,
  1000,
  1000,
  1000,
  1000,
  1000,
  1000,
  1000,
  1000,
  1000,
  1000,
  1000,
  1000,
  1000,
  1000,
  1000,
  1000,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  1000,
  1000,
  1000,
  1000,
  1000,
  1000,
  1000,
  1000,
  1000,
  1000,
  1000,
  1000,
  1000,
  1000,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
  -100,
]
`;

exports[`parse AT-07 with surface hoar 3`] = `
[
  245,
  245,
  261,
  278,
  277,
  294,
  294,
  277,
  294,
  294,
  294,
  294,
  294,
  278,
  261,
  261,
  277,
  278,
  261,
  277,
  261,
  277,
  277,
  277,
  262,
  294,
  310,
  310,
  294,
  277,
  277,
  293,
  326,
  309,
  310,
  310,
  326,
  358,
  389,
  454,
  470,
  535,
  615,
  599,
  713,
  843,
  843,
  761,
  811,
  745,
  778,
  876,
  762,
  632,
  794,
  680,
  745,
  680,
  762,
  811,
  778,
  664,
  632,
  648,
  665,
  664,
  777,
  729,
  794,
  762,
  892,
  1023,
  991,
  860,
  778,
  843,
  810,
  778,
  779,
  843,
  892,
  860,
  778,
  745,
  746,
  795,
  925,
  892,
  875,
  827,
  811,
  779,
  794,
  777,
  762,
  777,
  745,
  745,
  794,
  778,
  761,
  777,
  762,
  745,
  729,
  745,
  695,
  712,
  712,
  713,
  712,
  713,
  729,
  696,
  712,
  712,
  729,
  729,
  729,
  745,
  729,
  729,
  729,
  729,
  729,
  745,
  745,
  729,
  712,
  712,
  729,
  712,
  729,
  729,
  729,
  729,
  729,
  729,
  729,
  745,
  729,
  729,
  729,
  729,
]
`;
